@@ -1,3 +1,12 @@
+2008-08-30 Jens Tkotz <jens@peino.de> 1.5.9-svn-b14
+
+ * Change: Reenabled KOI8-R
+
+ * Change: Removed some unneeded PHP version check in isSupportedCharset
+           as the minimum PHP is 4.1.0
+
+ * Fix: _() -> gTranslate in stats.header
+
 2008-08-28 Jens Tkotz <jens@peino.de> 1.5.9-svn-b13
 
  * Fix: Link to comments overview on mainpage.
